front/src/app/foods-page/foods-total-items/foods-total-items.component.css
.collapsible {
  max-height: 80vh;
  overflow-y: auto;
}
.collapsible-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-right: 0px;
  padding: 0px;
  padding-left: 5px;
}
.collapsible-header:first-child div {
  text-align: justify;
  margin: 0 auto;
  padding: 10px;
  font-size: 18px;
  font-weight: bold;
  color: #696969;
}
.card-panel {
  height: 120px;
  text-align: justify;
}
.material-icons {
  margin: 0px;
}
.collapsible-body {
  padding: 5px;
}
.collapsible-body div {
  margin: 0px;
}
/********************************/
.totalSum {
  padding: 5px;
  background-color: #656565;
  color: white;
}
.totalSum div {
  margin: 0px;
  padding: 5px;
  font-size: 16px;
}
/********************************/
.accentText {
  font-size: 16px;
  font-weight: bold;
}
/********************************/
.currentItem {
  margin: 0px;
}
.foodName {
  font-size: 14px!important;
  font-weight: normal!important;
  padding: 5px!important;
  margin: 0px!important;
}
.amountItem {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0px!important;
  margin: 0px!important;
  user-select: none;
}
.amountItem span {
  font-size: 12px;
  font-weight: bold;
}
.collapsItem {
  padding: 0px!important;
  display: flex;
  align-items: center;
}
.btn-floating {
  transform: scale(0.5);
}

.btn-floating:active {
  transform: scale(0.4);
}
/*------------------------------*/
.chainName div, .actionPrice div, .discount div, .itemSum div {
  padding: 2px 5px;
  font-size: 12px;
}
/*-------------------------------*/
.deleteFood {
  margin: 0px;
}
.deleteFood a {
  cursor: pointer;
}
.emptyItemsText p:first-child {
  margin-top: 0px;
}
.emptyItemsText p {
  margin: 10px 0px;
}
.emptyItemsText p:last-child {
  margin-bottom: 0px;
}
/*********************************/
.input-field input {
  margin: 0px;
  margin-top: 10px;
  font-size: 14px;
  font-style: italic;
  height: 30px;
}
/*********************************/
.input-field input:focus {
  border-bottom: 1px solid #656565;
  box-shadow: 0 1px 0 0 #656565;
}
/*********************************/

